--- a/pom.xml
+++ b/pom.xml
@@ -73,5 +73,12 @@
             <version>2.11.0</version>
         </dependency>
 
+        <!--for random text in the text fields-->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.12.0</version>
+        </dependency>
+
     </dependencies>
 </project>
