--- a/pom.xml
+++ b/pom.xml
@@ -113,5 +113,13 @@
             <version>3.12.0</version>
         </dependency>
 
+        <!--for getters and setters annotations-->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.22</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 </project>
