--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,9 @@ dependencies {
     implementation group: 'commons-io', name: 'commons-io', version: '2.11.0'
     implementation 'org.apache.commons:commons-lang3:3.12.0'
     implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.1.3'
-    testImplementation group: 'org.testng', name: 'testng', version: '7.5'
+    testImplementation("org.testng:testng:7.3.0") {
+        transitive = false
+    }
     testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.22.0'
     implementation group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '5.1.1'
     implementation group: 'org.seleniumhq.selenium', name: 'selenium-grid', version: '4.1.3'
@@ -30,7 +32,7 @@ dependencies {
 group = 'com.epam'
 version = '1.0-SNAPSHOT'
 description = 'Trello'
-java.sourceCompatibility = JavaVersion.VERSION_1_8
+java.sourceCompatibility = JavaVersion.VERSION_11
 
 
 tasks.withType(JavaCompile) {
