--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,10 @@ dependencies {
     implementation group: 'io.qameta.allure', name: 'allure-testng', version: '2.17.3'
     implementation group: 'io.cucumber', name: 'cucumber-java', version: '7.2.3'
     implementation group: 'io.cucumber', name: 'cucumber-testng', version: '7.2.3'
+    implementation group: 'com.sun.mail', name: 'javax.mail', version: '1.6.2'
+    implementation group: 'javax.mail', name: 'javax.mail-api', version: '1.6.2'
     testImplementation group: 'io.rest-assured', name: 'rest-assured', version: '5.0.1'
+    implementation group: 'org.springframework', name: 'spring-context-support', version: '5.3.19'
 }
 
 /**Project info**/
