--- a/pom.xml
+++ b/pom.xml
@@ -81,5 +81,26 @@
             <version>3.12.0</version>
         </dependency>
 
+        <!-- Java native email sender-->
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>javax.mail-api</artifactId>
+            <version>1.6.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+            <version>1.6.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+            <version>5.3.19</version>
+        </dependency>
+
+
+
     </dependencies>
 </project>
