--- a/build.gradle
+++ b/build.gradle
@@ -15,12 +15,12 @@ repositories {
 }
 
 dependencies {
-    implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.36'
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.17.2'
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
     implementation group: 'commons-io', name: 'commons-io', version: '2.11.0'
     implementation 'org.apache.commons:commons-lang3:3.12.0'
     implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.1.3'
-    testImplementation("org.testng:testng:7.3.0") {
+    testImplementation("org.testng:testng:7.5") {
         transitive = false
     }
     testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.22.0'
@@ -30,7 +30,7 @@ dependencies {
     implementation group: 'io.cucumber', name: 'cucumber-java', version: '7.2.3'
     implementation group: 'io.cucumber', name: 'cucumber-testng', version: '7.2.3'
     testImplementation group: 'io.rest-assured', name: 'rest-assured', version: '5.0.1'
-    implementation group: 'com.google.zxing', name: 'javase', version: '3.4.1'
+    implementation group: 'com.google.zxing', name: 'javase', version: '3.5.0'
 }
 
 /**Project info**/
